--- a/views/board.ejs
+++ b/views/board.ejs
@@ -10,14 +10,23 @@
   <canvas class="whiteboard" ></canvas>
 
   <div class="colors">
-    <div class="color black"></div>
+    <!-- <div class="color black"></div>
     <div class="color red"></div>
     <div class="color green"></div>
     <div class="color blue"></div>
-    <div class="color yellow"></div>
+    <div class="color yellow"></div> -->
+    <div class="icons tooltip" id="clearCanvas">
+        <i class="fas fa-trash"></i>
+        <span class="tooltiptext">Clear Canvas</span>
+    </div>
+    <div class="tool tooltip">
+      <input type="color" id="color_picker" value="">
+      <span class="tooltiptext">Color Picker</span>
+    </div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
